[package]
name = "base85rs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A base85 (RFC1924 variant) encoder / decoder"
documentation = "https://docs.rs/base85rs/"
repository = "https://github.com/YetiBarBar/base85rs"
readme = "README.md"
exclude = [".gitignore"]
authors = ["YetiBarBar"]
categories = ["encoding"]
keywords = ["base85"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
